@@ -1,7 +1,13 @@
 package com.dracolich777.afterlifeentombed.init.recipes;
 
+import java.util.List;
+
+import com.dracolich777.afterlifeentombed.init.ModRecipes;
 import com.dracolich777.afterlifeentombed.items.PricklyPearArmor;
+
 import net.minecraft.core.RegistryAccess;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.inventory.CraftingContainer;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.PotionItem;
@@ -10,11 +16,6 @@ import net.minecraft.world.item.crafting.CraftingBookCategory;
 import net.minecraft.world.item.crafting.CustomRecipe;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.effect.MobEffectInstance;
-import net.minecraft.resources.ResourceLocation;
-import com.dracolich777.afterlifeentombed.init.ModRecipes;
-
-import java.util.List;
 
 public class PricklyPearInfusionRecipe extends CustomRecipe {
     
@@ -63,7 +64,7 @@ public class PricklyPearInfusionRecipe extends CustomRecipe {
         if (!armor.isEmpty() && !potion.isEmpty()) {
             List<MobEffectInstance> effects = PotionUtils.getMobEffects(potion);
             if (!effects.isEmpty()) {
-                MobEffectInstance effect = effects.getFirst(); // Use first effect
+                MobEffectInstance effect = effects.get(0); // Use first effect (Java 17 compatible)
                 PricklyPearArmor.storeEffect(armor, effect.getEffect(), 
                     effect.getDuration(), effect.getAmplifier());
             }
